# open-garden-hw

./: CMakeLists.txt  README.md
lib/ds18x20/: LICENSE
lib/tds/: .eil.yml  CMakeLists.txt  tds.c  tds.h
src/: main.c
src/tasks/: read_conductivity.c  read_temperature.c  read_water_level.c  tasks.h
